improvement: performance fix task3